--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter&family-Merriweather:wght@700&family-work+Sans&display-swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Merriweather:wght@700&family=Work+Sans&display=swap");
 
 *{
     margin:0;
     padding:0;
     box-sizing:border-box;
-    font-family:"work sans,sans-serif";
+    font-family: "Work Sans", sans-serif;
+    font-family: "Merriweather", serif;
+
 }
 
 body{
   display:flex;
   justify-content:center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 h1{
@@ -38,7 +40,7 @@ p{
   font-size:18px;
   letter-spacing: 1px;
   word-spacing: 2px;
-  line-height:1.6
+  line-height:1.6;
 
 }
 #editableEditor:focus{
@@ -47,11 +49,11 @@ p{
 }
 .checkButton{
   display:flex;
-  justify-content:center;
+  justify-content:space-evenly;
   align-items:center;
   margin-top: 36px;
   padding: 12px 24px;
-  background: rgb(43, 45, 56);
+  background: rgb(249, 249, 250);
   color: rgb(255, 255, 255);
   border-radius: 8px;
   font-size: 18px;
@@ -59,23 +61,47 @@ p{
   cursor: pointer;
 }
 button{
-  border: none;
+  border:burlywood;
+  width: 69px;
   background: rgb(5, 116, 242);
   cursor: pointer;
   border-radius: 6px;
   font-size: 18px;
   color: rgb(255, 255, 255);
   font-weight: 700;
-  padding: 10px.20px
+  padding: 10px;
 }
 button:focus,button:hover{
-  background: rgb(5, 116, 242,0.8);
-  box-shadow: 0 , 5px, 30px 0 rgb(0, 0, 0,0.1);
+  background: rgba(57, 148, 251, 0.8);
+  box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.1);
 }
 button:disabled{
   opacity : 0.5;
   cursor: not-allowed;
 }
+
+button:focus-visible {
+  outline: 2px solid rgba(5, 116, 242, 0.8);
+}
+
+@media (max-width: 768px) {
+  h1 {
+      font-size: 32px; /* Adjust heading size */
+  }
+  #editableEditor {
+      max-width: 100%; /* Allow editor to occupy full width */
+      padding: 12px;   /* Adjust padding */
+  }
+  p {
+      margin-top: 16px;
+      margin-bottom: 32px;
+  }
+  button {
+      font-size: 16px;
+      padding: 8px;
+  }
+}
+
 .word-counter{
   display: flex;
   justify-content:space-between;
